# Kerno

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_STARTER_PROMPT.md  DEV_SETUP.md  FILE_STRUCTURE.md  KERNO_STRATEGY.md  LEARNING_PIPELINE_SPEC.md  PROMPT_doc10_data_context_ingest.md  PROMPT_doc11_nis2_control_mapping.md  PROMPT_doc12_evidence_linking.md  PROMPT_doc13_decision_layer.md  PROMPT_doc14_dora_roi_live_register.md  PROMPT_doc15_dora_roi_export_validation.md  PROMPT_doc16_dora_roi_submission_workflow.md  PROMPT_doc16a_rls_scheduler_guard.md  PROMPT_doc17_dora_roi_hardening_review.md  PROMPT_doc17a_dora_roi_hardening_remediation.md  PROMPT_doc17b_dora_roi_schema_and_service_hardening.md  PROMPT_doc8_learning_pipeline.md  PROMPT_doc9_retrieval_scoring.md  alembic.ini  pyproject.toml  pytest.ini
Documents Archive/: CLAUDE_v1.1_old.md  PROMPT_doc8_learning_pipeline_v1.1_old.md
config/: __init__.py  constants.py
docs/: ai_decision_log_runbook.md
frontend/: jest.config.mjs  middleware.ts  package-lock.json  package.json
frontend/__tests__/: auth-routes.test.ts  coverage-grid.test.tsx  login-page.test.tsx  middleware.test.ts  recommendation-list.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/components/: ControlList.tsx  CoverageGrid.tsx  ExportButton.tsx  NavHeader.tsx  OverrideForm.tsx  RecalculateButton.tsx  RecommendationList.tsx  Toast.tsx
frontend/lib/: api.ts
migrations/: env.py
migrations/versions/: 001_create_tenant_table.py  002_create_embedding_table_with_rls.py  003_add_justification_text.py  003_create_override_table.py  004_create_audit_log_table.py  006_drop_retrieval_bias_vector_column.py  007_create_context_tables.py  008_create_control_tables.py  009_add_rls_to_evidence_links.py  010_create_recommendations_table.py  011_create_dora_roi_tables.py  012_create_dora_submission_tables.py  013_dora_hardening_constraints.py  014_add_tenant_credentials.py  015_add_embedding_to_context_records.py  016_harden_audit_log_ledger.py  (+6 more)
scripts/: seed_dev_tenant.py  seed_nis2_controls.py
src/: __init__.py  exceptions.py
src/api/: app.py  (+5 more)
tests/: conftest.py
(+159 files in other folders)
